CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_failr_hist__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_failr_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_failr_hist</externalName>
    <fields>
        <fullName>cde_reason_failr_eligty_indiv__c</fullName>
        <description>cde_reason_failr_eligty_indiv</description>
        <externalDeveloperName>cde_reason_failr_eligty_indiv</externalDeveloperName>
        <label>Eligibility Indiv Failure reason code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_failr_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_doc__c</fullName>
        <description>idn_doc</description>
        <externalDeveloperName>idn_doc</externalDeveloperName>
        <label>Doc ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Family Composition Eligibility ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_failr__c</fullName>
        <description>idn_indiv_eligty_failr</description>
        <externalDeveloperName>idn_indiv_eligty_failr</externalDeveloperName>
        <label>Individual Eligibility Failure ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_indiv_eligty_failr__x</referenceTo>
        <relationshipLabel>Individual Ineligibility Reasons Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_failr_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_failr_hist__c</fullName>
        <description>idn_indiv_eligty_failr_hist</description>
        <externalDeveloperName>idn_indiv_eligty_failr_hist</externalDeveloperName>
        <label>Individual Eligibility Failure  Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Family Composition Individual ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_reason_failr_eligty_indiv__c</fullName>
        <description>idn_reason_failr_eligty_indiv</description>
        <externalDeveloperName>idn_reason_failr_eligty_indiv</externalDeveloperName>
        <label>Indiv Eligibility Failure Reason Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_failr_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_updtd_user__c</fullName>
        <description>ind_updtd_user</description>
        <externalDeveloperName>ind_updtd_user</externalDeveloperName>
        <label>Updated User</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Ineligibility History</label>
    <pluralLabel>Individual Ineligibility History</pluralLabel>
</CustomObject>